# SDL_sound

./: .cvsignore  .gitignore  .wikiheaders-options  Android.mk  CHANGELOG  CMakeLists.txt  COPYING  CREDITS  CREDITS.txt  CWProject.sit  Doxyfile  INSTALL  LICENSE.txt  Makefile  Makefile.am  Makefile.in  Makefile.os2  README  README.md  SDL2_sound.pc.in  SDL_sound.c  SDL_sound.h  SDL_sound_internal.h  TODO  TODO.txt  acconfig.h  acinclude.m4  aclocal.m4  alt_audio_convert.c  alt_audio_convert.h  audio_convert.c  autogen.sh  bootstrap  config.h.in  configure  configure.ac  configure.in  extra_rwops.c  extra_rwops.h  filter_templates.h  (+3 more)
.github/workflows/: main.yml  release.yml
VisualC/: README.txt  playsound.dsp  playsound_static.dsp  sdl_sound.dsw  sdl_sound_dll.dsp  sdl_sound_static.dsp
acinclude/: libtool.m4
build-scripts/: release-info.json  test-versioning.sh
build-scripts/pkg-support/android/aar/cmake/: SDL3_soundConfig.cmake  SDL3_soundConfigVersion.cmake.in
build-scripts/pkg-support/mingw/: Makefile
build-scripts/pkg-support/mingw/cmake/: SDL3_soundConfig.cmake  SDL3_soundConfigVersion.cmake
build-scripts/pkg-support/msvc/: INSTALL.md.in
build-scripts/pkg-support/msvc/cmake/: SDL3_soundConfig.cmake.in
cmake/: SDL2_sound.pc.in  SDL2_soundConfig.cmake.in  SDL3_soundConfig.cmake.in  sdl3-sound.pc.in
cmake/test/: CMakeLists.txt  main.c
decoders/: .cvsignore  Makefile.am  Makefile.in  aiff.c  au.c  coreaudio.c  flac.c  midi.c  mikmod.c  mod.c  modplug.c  mp3.c  mpg123.c  mpglib.c  ogg.c  quicktime.c  raw.c  shn.c  skeleton.c  smpeg.c  speex.c  voc.c  wav.c
decoders/libmpg123/: Makefile.in
decoders/mpglib/: .cvsignore  Makefile.am  common.c  decode_i386.c  interface.c  layer1.c  layer2.c  layer3.c  mpg123_sdlsound.h  mpglib_common.c  mpglib_sdlsound.h
decoders/timidity/: .cvsignore  CHANGES  COPYING  Makefile.am  Makefile.in  Makefile.testmidi  common.c  common.h  instrum.c  instrum_dls.c  mix.c  options.h  playmidi.c  readmidi.c  resample.c  timidity.c  timidity.h
docs/: CHANGELOG.txt  CREDITS.txt  Doxyfile  INSTALL.txt  README-migration.md  README.txt  TODO.txt
examples/: Makefile.am  Makefile.in  playsound.c  playsound_simple.c
include/SDL3_sound/: SDL_sound.h
mixer/: converters.c  mixercore.c  tutorial.txt
playsound/: .cvsignore  Makefile.am  Makefile.in  physfsrwops.c  physfsrwops.h  playsound.c  playsound_simple.c  test_sdlsound.c
src/: Makefile.os2  SDL_sound.c  SDL_sound.exports  SDL_sound.h  SDL_sound.sym  SDL_sound_aiff.c  SDL_sound_au.c  SDL_sound_coreaudio.c  SDL_sound_flac.c  SDL_sound_internal.h  SDL_sound_midi.c  SDL_sound_mikmod.c  SDL_sound_modplug.c  SDL_sound_mp3.c  SDL_sound_ogg.c  SDL_sound_raw.c  SDL_sound_shn.c  SDL_sound_skeleton.c  SDL_sound_speex.c  SDL_sound_voc.c  SDL_sound_vorbis.c  SDL_sound_wav.c  dr_flac.h  dr_mp3.h  genexports.py  stb_vorbis.h  version.rc
src/libmodplug/: Makefile.in  fastmix.c  fastmix.cpp  libmodplug.h  load_669.c  load_669.cpp  load_abc.c  load_abc.cpp  load_amf.c  load_amf.cpp  load_ams.c  load_ams.cpp  load_dbm.c  load_dbm.cpp  load_dmf.c  load_dmf.cpp  load_dsm.cpp  load_far.c  load_far.cpp  load_it.c  load_it.cpp  load_mdl.c  load_mdl.cpp  load_med.c  load_med.cpp  load_mid.c  load_mid.cpp  load_mod.c  load_mod.cpp  load_mt2.c  load_mt2.cpp  load_mtm.c  load_mtm.cpp  load_okt.c  load_okt.cpp  load_pat.c  load_pat.cpp  load_psm.c  load_psm.cpp  load_ptm.c  (+26 more)
src/timidity/: COPYING  COPYING.artistic  common.c  common.h  instrum.c  mix.c  options.h  output.c  output.h  playmidi.c  readmidi.c  resample.c  tables.c  timidity.c  timidity.h
